--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,231 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
+
+    <title>Legendy Desk - The ultimate PokeDex</title>
 </head>
 <body>
-    <h1>pao</h1>
+    <header>
+
+        <a href="#">
+            <img src="images/pokeball.png" alt="pokeball-logo" class="logo">
+        </a>
+        <button id="theme-button">
+            <img src="images/sun.png" alt="sun-button" class="button-img">
+        </button>
+       
+    </header>
+
+    <main>
+
+        <ul class="poke-list">
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Bulbasaur</span>
+                    <span>N° 0001</span>
+                </div>
+
+                <img src="images/bulbasaur.gif" alt="bulbasaur" class="poke-gif">
+
+                <ul class="types">
+                    <li class="grass-type">Grass</li>
+                    <li class="poison-type">Poison</li>
+                </ul>
+
+                <p class="desc">
+                    There is a plant seed on its back right from the day this Pokémon is born. The seed slowly grows 
+                    larger.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Ivysaur</span>
+                    <span>N° 0002</span>
+                </div>
+
+                <img src="images/ivysaur.gif" alt="ivysaur" class="poke-gif">
+
+                <ul class="types">
+                    <li class="grass-type">Grass</li>
+                    <li class="poison-type">Poison</li>
+                </ul>
+
+                <p class="desc">
+                    When the bulb on its back grows large, it appears to lose the ability to stand on its hind legs.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Venusaur</span>
+                    <span>N° 0003</span>
+                </div>
+
+                <img src="images/venusaur.gif" alt="venusaur" class="poke-gif">
+
+                <ul class="types">
+                    <li class="grass-type">Grass</li>
+                    <li class="poison-type">Poison</li>
+                </ul>
+
+                <p class="desc">
+                    Its plant blooms when it is absorbing solar energy. It stays on the move to seek sunlight.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Charmander</span>
+                    <span>N° 0004</span>
+                </div>
+
+                <img src="images/charmander.gif" alt="charmander" class="poke-gif">
+
+                <ul class="types">
+                    <li class="fire-type">Fire</li>
+                </ul>
+
+                <p class="desc">
+                    From the time it is born, a flame burns at the tip of its tail. Its life would end if the flame were 
+                    to go out.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Charmeleon</span>
+                    <span>N° 0005</span>
+                </div>
+
+                <img src="images/charmeleon.gif" alt="charmeleon" class="poke-gif">
+
+                <ul class="types">
+                    <li class="fire-type">Fire</li>
+                </ul>
+
+                <p class="desc">
+                    If it becomes agitated during battle, it spouts intense flames, incinerating its surroundings.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Charizard</span>
+                    <span>N° 0006</span>
+                </div>
+
+                <img src="images/charizard.gif" alt="charizard" class="poke-gif">
+
+                <ul class="types">
+                    <li class="fire-type">Fire</li>
+                    <li class="flying-type">Flying</li>
+                </ul>
+
+                <p class="desc">
+                    Its wings can carry this Pokémon close to an altitude of 4,600 feet. It blows out fire at very high 
+                    temperatures.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Squirtle</span>
+                    <span>N° 0007</span>
+                </div>
+
+                <img src="images/squirtle.gif" alt="squirtle" class="poke-gif">
+
+                <ul class="types">
+                    <li class="water-type">Water</li>
+                </ul>
+
+                <p class="desc">
+                    When it feels threatened, it draws its limbs inside its shell and sprays water from its mouth.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Wartortle</span>
+                    <span>N° 0008</span>
+                </div>
+
+                <img src="images/wartortle.gif" alt="wartortle" class="poke-gif">
+
+                <ul class="types">
+                    <li class="water-type">Water</li>
+                </ul>
+
+                <p class="desc">
+                    It cleverly controls its furry ears and tail to maintain its balance while swimming.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Blastoise</span>
+                    <span>N° 0009</span>
+                </div>
+
+                <img src="images/blastoise.gif" alt="blastoise" class="poke-gif">
+
+                <ul class="types">
+                    <li class="water-type">Water</li>
+                </ul>
+
+                <p class="desc">
+                    It crushes its foe under its heavy body to cause fainting. In a pinch, it will withdraw inside its shell.
+                </p>
+
+            </li>
+            <li class="poke-card">
+
+                <div class="info">
+                    <!-- span =  -->
+                    <span>Caterpie</span>
+                    <span>N° 0010</span>
+                </div>
+
+                <img src="images/caterpie.gif" alt="caterpie" class="poke-gif">
+
+                <ul class="types">
+                    <li class="insect-type">Insect</li>
+                </ul>
+
+                <p class="desc">
+                    Its short feet are tipped with suction pads that enable it to tirelessly climb slopes and walls.
+                </p>
+
+            </li>
+        </ul>
+
+    </main>
 </body>
 </html>
