--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="shortcut icon" href="images/pokeball.png" type="image/x-icon">
+
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/scrollbar.css">
@@ -13,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
 
-    <title>Legendy Desk - The ultimate PokeDex</title>
+    <title>LegendyDex - The ultimate PokeDex</title>
 </head>
 <body>
     <header>
@@ -21,7 +23,7 @@
         <a href="#">
             <img src="images/pokeball.png" alt="pokeball-logo" class="logo">
         </a>
-        <button id="theme-button">
+        <button id="theme-button" onclick="trocar_tema()">
             <img src="images/sun.png" alt="sun-button" class="button-img">
         </button>
        
@@ -230,5 +232,7 @@
         </ul>
 
     </main>
+
+    <script src="js/script.js"></script>
 </body>
 </html>
