--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="images/pokeball.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/images/pokeball.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/scrollbar.css">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/scrollbar.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,10 +21,10 @@
     <header>
 
         <a href="#">
-            <img src="images/pokeball.png" alt="pokeball-logo" class="logo">
+            <img src="./src/images/pokeball.png" alt="pokeball-logo" class="logo">
         </a>
         <button id="theme-button" onclick="trocar_tema()">
-            <img src="images/sun.png" alt="sun-button" class="button-img">
+            <img src="./src/images/sun.png" alt="sun-button" class="button-img">
         </button>
        
     </header>
@@ -40,7 +40,7 @@
                     <span>N° 0001</span>
                 </div>
 
-                <img src="images/bulbasaur.gif" alt="bulbasaur" class="poke-gif">
+                <img src="./src/images/bulbasaur.gif" alt="bulbasaur" class="poke-gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -61,7 +61,7 @@
                     <span>N° 0002</span>
                 </div>
 
-                <img src="images/ivysaur.gif" alt="ivysaur" class="poke-gif">
+                <img src="./src/images/ivysaur.gif" alt="ivysaur" class="poke-gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -81,7 +81,7 @@
                     <span>N° 0003</span>
                 </div>
 
-                <img src="images/venusaur.gif" alt="venusaur" class="poke-gif">
+                <img src="./src/images/venusaur.gif" alt="venusaur" class="poke-gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -101,7 +101,7 @@
                     <span>N° 0004</span>
                 </div>
 
-                <img src="images/charmander.gif" alt="charmander" class="poke-gif">
+                <img src="./src/images/charmander.gif" alt="charmander" class="poke-gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -121,7 +121,7 @@
                     <span>N° 0005</span>
                 </div>
 
-                <img src="images/charmeleon.gif" alt="charmeleon" class="poke-gif">
+                <img src="./src/images/charmeleon.gif" alt="charmeleon" class="poke-gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -140,7 +140,7 @@
                     <span>N° 0006</span>
                 </div>
 
-                <img src="images/charizard.gif" alt="charizard" class="poke-gif">
+                <img src="./src/images/charizard.gif" alt="charizard" class="poke-gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -161,7 +161,7 @@
                     <span>N° 0007</span>
                 </div>
 
-                <img src="images/squirtle.gif" alt="squirtle" class="poke-gif">
+                <img src="./src/images/squirtle.gif" alt="squirtle" class="poke-gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -180,7 +180,7 @@
                     <span>N° 0008</span>
                 </div>
 
-                <img src="images/wartortle.gif" alt="wartortle" class="poke-gif">
+                <img src="./src/images/wartortle.gif" alt="wartortle" class="poke-gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -199,7 +199,7 @@
                     <span>N° 0009</span>
                 </div>
 
-                <img src="images/blastoise.gif" alt="blastoise" class="poke-gif">
+                <img src="./src/images/blastoise.gif" alt="blastoise" class="poke-gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -218,7 +218,7 @@
                     <span>N° 0010</span>
                 </div>
 
-                <img src="images/caterpie.gif" alt="caterpie" class="poke-gif">
+                <img src="./src/images/caterpie.gif" alt="caterpie" class="poke-gif">
 
                 <ul class="types">
                     <li class="insect-type">Insect</li>
@@ -233,6 +233,6 @@
 
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
