--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/scrollbar.css">
+    <link rel="stylesheet" href="./src/css/themes.css">
+    <link rel="stylesheet" href="./src/css/types.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +26,7 @@
             <img src="./src/images/pokeball.png" alt="pokeball-logo" class="logo">
         </a>
         <button id="theme-button" onclick="trocar_tema()">
-            <img src="./src/images/sun.png" alt="sun-button" class="button-img">
+            <img src="./src/images/sun-stone.png" alt="sun-button" class="button-img">
         </button>
        
     </header>
@@ -32,7 +34,7 @@
     <main>
 
         <ul class="poke-list">
-            <li class="poke-card">
+            <li class="grass-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -40,7 +42,7 @@
                     <span>N° 0001</span>
                 </div>
 
-                <img src="./src/images/bulbasaur.gif" alt="bulbasaur" class="poke-gif">
+                <img src="./src/images/pokemons/bulbasaur.gif" alt="bulbasaur" class="poke-gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -53,7 +55,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="grass-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -61,7 +63,7 @@
                     <span>N° 0002</span>
                 </div>
 
-                <img src="./src/images/ivysaur.gif" alt="ivysaur" class="poke-gif">
+                <img src="./src/images/pokemons/ivysaur.gif" alt="ivysaur" class="poke-gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -73,7 +75,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="grass-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -81,7 +83,7 @@
                     <span>N° 0003</span>
                 </div>
 
-                <img src="./src/images/venusaur.gif" alt="venusaur" class="poke-gif">
+                <img src="./src/images/pokemons/venusaur.gif" alt="venusaur" class="poke-gif">
 
                 <ul class="types">
                     <li class="grass-type">Grass</li>
@@ -93,7 +95,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="fire-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -101,7 +103,7 @@
                     <span>N° 0004</span>
                 </div>
 
-                <img src="./src/images/charmander.gif" alt="charmander" class="poke-gif">
+                <img src="./src/images/pokemons/charmander.gif" alt="charmander" class="poke-gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -113,7 +115,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="fire-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -121,7 +123,7 @@
                     <span>N° 0005</span>
                 </div>
 
-                <img src="./src/images/charmeleon.gif" alt="charmeleon" class="poke-gif">
+                <img src="./src/images/pokemons/charmeleon.gif" alt="charmeleon" class="poke-gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -132,7 +134,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="fire-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -140,7 +142,7 @@
                     <span>N° 0006</span>
                 </div>
 
-                <img src="./src/images/charizard.gif" alt="charizard" class="poke-gif">
+                <img src="./src/images/pokemons/charizard.gif" alt="charizard" class="poke-gif">
 
                 <ul class="types">
                     <li class="fire-type">Fire</li>
@@ -153,7 +155,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="water-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -161,7 +163,7 @@
                     <span>N° 0007</span>
                 </div>
 
-                <img src="./src/images/squirtle.gif" alt="squirtle" class="poke-gif">
+                <img src="./src/images/pokemons/squirtle.gif" alt="squirtle" class="poke-gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -172,7 +174,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="water-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -180,7 +182,7 @@
                     <span>N° 0008</span>
                 </div>
 
-                <img src="./src/images/wartortle.gif" alt="wartortle" class="poke-gif">
+                <img src="./src/images/pokemons/wartortle.gif" alt="wartortle" class="poke-gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -191,7 +193,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="water-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -199,7 +201,7 @@
                     <span>N° 0009</span>
                 </div>
 
-                <img src="./src/images/blastoise.gif" alt="blastoise" class="poke-gif">
+                <img src="./src/images/pokemons/blastoise.gif" alt="blastoise" class="poke-gif">
 
                 <ul class="types">
                     <li class="water-type">Water</li>
@@ -210,7 +212,7 @@
                 </p>
 
             </li>
-            <li class="poke-card">
+            <li class="insect-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
@@ -218,7 +220,7 @@
                     <span>N° 0010</span>
                 </div>
 
-                <img src="./src/images/caterpie.gif" alt="caterpie" class="poke-gif">
+                <img src="./src/images/pokemons/caterpie.gif" alt="caterpie" class="poke-gif">
 
                 <ul class="types">
                     <li class="insect-type">Insect</li>
