--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="shortcut icon" href="./src/images/pokeball.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/images/icon.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
@@ -23,7 +23,7 @@
     <header>
 
         <a href="#">
-            <img src="./src/images/pokeball.png" alt="pokeball-logo" class="logo">
+            <img src="./src/images/pokeball.jpg" alt="pokeball-logo" class="logo">
         </a>
         <button id="theme-button" onclick="trocar_tema()">
             <img src="./src/images/sun-stone.png" alt="sun-button" class="button-img">
@@ -223,7 +223,7 @@
                 <img src="./src/images/pokemons/caterpie.gif" alt="caterpie" class="poke-gif">
 
                 <ul class="types">
-                    <li class="insect-type">Insect</li>
+                    <li class="insect-type">Bug</li>
                 </ul>
 
                 <p class="desc">
