--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
-    <link rel="stylesheet" href="./src/css/scrollbar.css">
     <link rel="stylesheet" href="./src/css/themes.css">
     <link rel="stylesheet" href="./src/css/types.css">
 
@@ -38,15 +37,21 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Bulbasaur</span>
-                    <span>N° 0001</span>
+                    <span class="poke-name-num">Bulbasaur</span>
+                    <span class="poke-name-num">N° 0001</span>
                 </div>
 
                 <img src="./src/images/pokemons/bulbasaur.gif" alt="bulbasaur" class="poke-gif">
 
                 <ul class="types">
-                    <li class="grass-type">Grass</li>
-                    <li class="poison-type">Poison</li>
+                    <li class="grass-type">
+                        <img class="types-icons" src="src/images/icons/types/grass.svg" alt="grass type">
+                        Grass
+                    </li>
+                    <li class="poison-type">
+                        <img class="types-icons" src="src/images/icons/types/poison.svg" alt="poison type">
+                        Poison
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -59,15 +64,21 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Ivysaur</span>
-                    <span>N° 0002</span>
+                    <span class="poke-name-num">Ivysaur</span>
+                    <span class="poke-name-num">N° 0002</span>
                 </div>
 
                 <img src="./src/images/pokemons/ivysaur.gif" alt="ivysaur" class="poke-gif">
 
                 <ul class="types">
-                    <li class="grass-type">Grass</li>
-                    <li class="poison-type">Poison</li>
+                    <li class="grass-type">
+                        <img class="types-icons" src="src/images/icons/types/grass.svg" alt="grass type">
+                        Grass
+                    </li>
+                    <li class="poison-type">
+                        <img class="types-icons" src="src/images/icons/types/poison.svg" alt="poison type">
+                        Poison
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -79,15 +90,21 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Venusaur</span>
-                    <span>N° 0003</span>
+                    <span class="poke-name-num">Venusaur</span>
+                    <span class="poke-name-num">N° 0003</span>
                 </div>
 
                 <img src="./src/images/pokemons/venusaur.gif" alt="venusaur" class="poke-gif">
 
                 <ul class="types">
-                    <li class="grass-type">Grass</li>
-                    <li class="poison-type">Poison</li>
+                    <li class="grass-type">
+                        <img class="types-icons" src="src/images/icons/types/grass.svg" alt="grass type">
+                        Grass
+                    </li>
+                    <li class="poison-type">
+                        <img class="types-icons" src="src/images/icons/types/poison.svg" alt="poison type">
+                        Poison
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -99,14 +116,17 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Charmander</span>
-                    <span>N° 0004</span>
+                    <span class="poke-name-num">Charmander</span>
+                    <span class="poke-name-num">N° 0004</span>
                 </div>
 
                 <img src="./src/images/pokemons/charmander.gif" alt="charmander" class="poke-gif">
 
                 <ul class="types">
-                    <li class="fire-type">Fire</li>
+                    <li class="fire-type">
+                        <img class="types-icons" src="src/images/icons/types/fire.svg" alt="fire type">
+                        Fire
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -119,14 +139,17 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Charmeleon</span>
-                    <span>N° 0005</span>
+                    <span class="poke-name-num">Charmeleon</span>
+                    <span class="poke-name-num">N° 0005</span>
                 </div>
 
                 <img src="./src/images/pokemons/charmeleon.gif" alt="charmeleon" class="poke-gif">
 
                 <ul class="types">
-                    <li class="fire-type">Fire</li>
+                    <li class="fire-type">
+                        <img class="types-icons" src="src/images/icons/types/fire.svg" alt="fire type">
+                        Fire
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -138,15 +161,21 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Charizard</span>
-                    <span>N° 0006</span>
+                    <span class="poke-name-num">Charizard</span>
+                    <span class="poke-name-num">N° 0006</span>
                 </div>
 
                 <img src="./src/images/pokemons/charizard.gif" alt="charizard" class="poke-gif">
 
                 <ul class="types">
-                    <li class="fire-type">Fire</li>
-                    <li class="flying-type">Flying</li>
+                    <li class="fire-type">
+                        <img class="types-icons" src="src/images/icons/types/fire.svg" alt="fire type">
+                        Fire
+                    </li>
+                    <li class="flying-type">
+                        <img class="types-icons" src="src/images/icons/types/flying.svg" alt="flying type">
+                        Flying
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -159,14 +188,17 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Squirtle</span>
-                    <span>N° 0007</span>
+                    <span class="poke-name-num">Squirtle</span>
+                    <span class="poke-name-num">N° 0007</span>
                 </div>
 
                 <img src="./src/images/pokemons/squirtle.gif" alt="squirtle" class="poke-gif">
 
                 <ul class="types">
-                    <li class="water-type">Water</li>
+                    <li class="water-type">
+                        <img class="types-icons" src="src/images/icons/types/water.svg" alt="water type">
+                        Water
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -178,14 +210,17 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Wartortle</span>
-                    <span>N° 0008</span>
+                    <span class="poke-name-num">Wartortle</span>
+                    <span class="poke-name-num">N° 0008</span>
                 </div>
 
                 <img src="./src/images/pokemons/wartortle.gif" alt="wartortle" class="poke-gif">
 
                 <ul class="types">
-                    <li class="water-type">Water</li>
+                    <li class="water-type">
+                        <img class="types-icons" src="src/images/icons/types/water.svg" alt="water type">
+                        Water
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -197,14 +232,17 @@
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Blastoise</span>
-                    <span>N° 0009</span>
+                    <span class="poke-name-num">Blastoise</span>
+                    <span class="poke-name-num">N° 0009</span>
                 </div>
 
                 <img src="./src/images/pokemons/blastoise.gif" alt="blastoise" class="poke-gif">
 
                 <ul class="types">
-                    <li class="water-type">Water</li>
+                    <li class="water-type">
+                        <img class="types-icons" src="src/images/icons/types/water.svg" alt="water type">
+                        Water
+                    </li>
                 </ul>
 
                 <p class="desc">
@@ -212,18 +250,21 @@
                 </p>
 
             </li>
-            <li class="insect-poke-card">
+            <li class="bug-poke-card">
 
                 <div class="info">
                     <!-- span =  -->
-                    <span>Caterpie</span>
-                    <span>N° 0010</span>
+                    <span class="poke-name-num">Caterpie</span>
+                    <span class="poke-name-num">N° 0010</span>
                 </div>
 
                 <img src="./src/images/pokemons/caterpie.gif" alt="caterpie" class="poke-gif">
 
                 <ul class="types">
-                    <li class="insect-type">Bug</li>
+                    <li class="bug-type">
+                        <img class="types-icons" src="src/images/icons/types/bug.svg" alt="bug type">
+                        Bug
+                    </li>
                 </ul>
 
                 <p class="desc">
