--- a/index.html
+++ b/index.html
@@ -276,6 +276,21 @@
 
     </main>
 
+    <footer>
+        <small>Created by Eduardo Henrique</small>
+        <div class="social-medias">
+            <a href="https://www.linkedin.com/in/eduardohenriquedev/" target="_blank" rel="noopener noreferrer" class="social-medias-link">
+                <img class="social-medias-icons" id="icon1" src="src/images/icons/social-medias/light/linkedin.png" alt="linkedin">
+            </a>
+            <a href="https://github.com/Git-Eduardo-Henrique/Pokemon-Landing-Page" target="_blank" rel="noopener noreferrer" class="social-medias-link">
+                <img class="social-medias-icons" id="icon2" src="src/images/icons/social-medias/light/github.png" alt="github">
+            </a>
+            <a href="https://www.instagram.com/eduardo_henrique_0101/" target="_blank" rel="noopener noreferrer" class="social-medias-link">
+                <img class="social-medias-icons" id="icon3" src="src/images/icons/social-medias/light/instagram.png" alt="instagram">
+            </a>
+        </div>
+    </footer>
+
     <script src="./src/js/script.js"></script>
 </body>
 </html>
