--- a/index.html
+++ b/index.html
@@ -24,19 +24,18 @@
         <a href="#">
             <img src="./src/images/pokeball.jpg" alt="pokeball-logo" class="logo">
         </a>
-        <button id="theme-button" onclick="trocar_tema()">
+        <button id="theme-button">
             <img src="./src/images/sun-stone.png" alt="sun-button" class="button-img">
-        </button>
+        </button>        
        
     </header>
 
     <main>
 
         <ul class="poke-list">
-            <li class="grass-poke-card">
+            <!-- <li class="grass-poke-card">
 
                 <div class="info">
-                    <!-- span =  -->
                     <span class="poke-name-num">Bulbasaur</span>
                     <span class="poke-name-num">N° 0001</span>
                 </div>
@@ -59,7 +58,7 @@
                     larger.
                 </p>
 
-            </li>
+            </li> -->
             <li class="grass-poke-card">
 
                 <div class="info">
@@ -291,6 +290,6 @@
         </div>
     </footer>
 
-    <script src="./src/js/script.js"></script>
+    <script type="module" src="./src/js/script.js"></script>
 </body>
 </html>
