--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
-    <link rel="stylesheet" href="./src/css/themes.css">
+    <link rel="stylesheet" href="./src/css/dark_theme.css">
     <link rel="stylesheet" href="./src/css/types.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,13 +42,13 @@
         <small>Created by Eduardo Henrique</small>
         <div class="social-medias">
             <a href="https://www.linkedin.com/in/eduardohenriquedev/" target="_blank" rel="noopener noreferrer" class="social-medias-link">
-                <img class="social-medias-icons" id="icon1" src="src/images/icons/social-medias/light/linkedin.png" alt="linkedin">
+                <img class="social-medias-icons" src="src/images/icons/social-medias/linkedin.png" alt="linkedin">
             </a>
             <a href="https://github.com/Git-Eduardo-Henrique/Pokemon-Landing-Page" target="_blank" rel="noopener noreferrer" class="social-medias-link">
-                <img class="social-medias-icons" id="icon2" src="src/images/icons/social-medias/light/github.png" alt="github">
+                <img class="social-medias-icons" src="src/images/icons/social-medias/github.png" alt="github">
             </a>
             <a href="https://www.instagram.com/eduardo_henrique_0101/" target="_blank" rel="noopener noreferrer" class="social-medias-link">
-                <img class="social-medias-icons" id="icon3" src="src/images/icons/social-medias/light/instagram.png" alt="instagram">
+                <img class="social-medias-icons" src="src/images/icons/social-medias/instagram.png" alt="instagram">
             </a>
         </div>
     </footer>
